--- a/app/views/riff_photos/index.html.erb
+++ b/app/views/riff_photos/index.html.erb
@@ -1,14 +1,9 @@
-<%= s3_uploader_form callback_url: documents_url,
-  id: "s3_uploader",
-  callback_param: "document[direct_upload_url]",
-  expiration: 24.hours.from_now.utc.iso8601,
-  max_file_size: 100.megabytes do %>
-  <%= file_field_tag :file, multiple: true %>
+<h1>riff_photo upload</h1>
+<%= link_to 'Add riff_photo', new_riff_photo_path =%>
+<br>
+<% @riff_photos.each do |riff_photo| %>
+<%= riff_photo.s3_url =%>
+<br>
+  <%= image_tag riff_photo.s3_url =%>
+  <br>
 <% end %>
-<div id="uploads_container"></div>
-<script id="template-upload" type="text/x-tmpl">
-<div id="upload_{%=o.unique_id%}" class="upload">
-  <h5>{%=o.name%}</h5>
-  <div class="progress progress-striped active"><div class="bar" style="width: 0%"></div></div>
-</div>
-</script>
