fixed storing photo into s3

--- a/app/views/riff_photos/_form.html.haml
+++ b/app/views/riff_photos/_form.html.haml
@@ -5,6 +5,6 @@
     = f.input :photo_name
     = f.input :owner
     = f.input :shoutout
-
+    = f.file_field :image
   .form-actions
     = f.button :submit
