--- a/app/views/riff_photos/show.html.haml
+++ b/app/views/riff_photos/show.html.haml
@@ -9,6 +9,9 @@
 %p
   %b Shoutout:
   = @riff_photo.shoutout
+%p
+  %b Image:
+  = @riff_photo.image
 
 = link_to 'Edit', edit_riff_photo_path(@riff_photo)
 \|
