--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='riff'>
+<html ng-app='riffApp'>
 <head>
   <title>riff</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
