added profile scaffold with paperclip upload to s3

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,8 @@
 = link_to riff_photos_path do
-  test
+  riff_photo
+%br
+= link_to profiles_path do
+  Profile
 %div{"ng-app" => "riff"}
   .view-container
     .view-frame.animate-view{"ng-view" => ""}
