got form to show up on sidebar

--- a/app/views/profiles/_new.html.haml
+++ b/app/views/profiles/_new.html.haml
@@ -23,18 +23,5 @@
   %input.Home{type: "text", placeholder: "Home phone nubmer"}
   %br
   %br
-  %input.location{type: "text", placeholder: "Location"}
-  %button.create-profile Create Hospital
+  %button.create-profile Create Profile
   %button.escape Cancel
-  / = f.file_field :avatar
-  /   = f.input :firstName
-  /   = f.input :lastNmae
-  /   = f.input :birthDate
-  /   = f.input :status
-  /   = f.input :address1
-  /   = f.input :address2
-  /   = f.input :city
-  /   = f.input :state
-  /   = f.input :zip
-  /   = f.input :Cell
-  /   = f.input :Home
