--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,6 +5,10 @@ $content-width:80%;
   position: absolute;
   left:0;
 }
+.form {
+  text-align: center;
+  display: inline-block;
+}
 input {
   color: black !important;
 }
