fixed minor profile problems

--- a/app/views/profiles/_new.html.haml
+++ b/app/views/profiles/_new.html.haml
@@ -1,4 +1,5 @@
 .form
+  %input.avatar{type: "file"}
   %br
   %input.firstName{type: "text", placeholder: "first name"}
   %br
@@ -18,9 +19,9 @@
   %br
   %input.zip{type: "integer", placeholder: "Zip"}
   %br
-  %input.Cell{type: "text", placeholder: "Home phone number"}
+  %input.Cell{type: "integer", placeholder: "Cell phone number"}
   %br
-  %input.Home{type: "text", placeholder: "Home phone nubmer"}
+  %input.Home{type: "integer", placeholder: "Home phone nubmer"}
   %br
   %br
   %button.create-profile Create Profile
