--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -10,25 +10,27 @@
   = link_to remote_sign_in_path, {rel: 'sign_in_modal', :remote => true} do
     %li Sign In
 .myprofile
-  test
-  / = @profile.firstName
-  / = @profile.lastName
-  / %br
-  / Birthdate:
-  / = @profile.birthDate
-  / %br
-  / Address:
-  / = @profile.address1
-  / = @profile.address2
-  / ,
-  / = @profile.city
-  / ,
-  / = @profile.state
-  / ,
-  / = @profile.zip
-  / %br
-  / Home Phone:
-  / = @profile.home
-  / %br
-  / Cell Phone:
-  / = @profile.cell
+  - @profiles.each do |profile|
+    = profile.firstName
+    = profile.lastName
+    is feeling 
+    = profile.status
+    %br
+    Birthdate:
+    = profile.birthDate
+    %br
+    Address:
+    = profile.address1
+    = profile.address2
+    ,
+    = profile.city
+    ,
+    = profile.state
+    ,
+    = profile.zip
+    %br
+    Home Phone:
+    = profile.home
+    %br
+    Cell Phone:
+    = profile.cell
