--- a/app/views/riffblobs/_form.html.haml
+++ b/app/views/riffblobs/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@riff_photo, :html => { :multipart => true }) do |f|
+= simple_form_for(@riffblob, :html => { :multipart => true }) do |f|
   = f.error_notification
 
   .form-inputs
