rake task good to go, almost ready to style

--- a/app/views/riffblobs/_form.html.haml
+++ b/app/views/riffblobs/_form.html.haml
@@ -2,8 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :photo_name
-    = f.input :owner
+    = f.input :user_id
     = f.input :shoutout
     = f.file_field :image
   .form-actions
