--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,8 +9,7 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :photo_name
-    = f.input :owner
+    = f.input :user_id
     = f.input :shoutout
     = f.file_field :image
   .form-actions
@@ -22,17 +21,20 @@
 %h2 here is what other people are riffing about.....
 
 - @riffblobs.each do |riffblob|
-  Name:
-  = riffblob.image_file_name
   %br
-  Owner:
-  = riffblob.owner
+  = riffblob.image_updated_at
+  %br
+  User_id:
+  = riffblob.user_id
   %br
   \#:
   = riffblob.shoutout
   %br
   URL:
   = riffblob.image
+  %br
+  = "https://dl-web.dropbox.com/get/Apps/riffApp/blues_mikey_drum_test.mp3?_subject_uid=2413438&w=AAAUZRDv3Vl6QGFxdGhbTVFOHws0JONpLuDBhsUaGcVc4A"
+  %br
   %br
   ||||||||||||||||||||
   %br
