fixed asset pipeline

--- a/app/assets/views/splash.html
+++ b/app/assets/views/splash.html
@@ -1,4 +1,4 @@
 <h1 class='splash'>riff</h1>
 <video autoplay loop id="bgvid">
-  <source src="RiffVid.mov" type="video/mp4">
+  <source src="assets/RiffVid.mov" type="video/mp4">
 </video>
