--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
 @import "bourbon";
 $content-width:80%;
+
 .myprofile {
   position: absolute;
   left:0;
@@ -210,7 +211,7 @@ html, body {
 
 h1 {
   font-family:'Delicate';
-  font-size:100px;
+  font-size:200px;
   color:white;
   text-align:center;
   margin-bottom:10px;
@@ -264,6 +265,6 @@ video#bgvid {
 }
 
 .splash {
-  top:15vh;
+  top:150px;
   font-size:40vh;
 }
