--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@ input {
   color: black !important;
 }
 .container1 {
-  position: fixed;
+  position: absolute;
   width: 250px;
   margin-left: 15%;
   margin-right: 50%;
