configuring for ngUpload

--- a/app/assets/views/upload.html
+++ b/app/assets/views/upload.html
@@ -11,14 +11,14 @@
   <form ng-upload="uploadComplete(riffblob)" action="/riffblobs.json">
     <p>
       <label>Fullname:</label>
-      <input type="text" name="fullname" ng-model="fullname" />
+      <input type="text" name="fullname" ng-model="fullname" >
     </p>
     <p>
       <label>Your picture (file will not be saved on the server):</label>
-      <input type="file" name="file"/>
+      <input type="file" name="file">
     </p>
     <p>
-      <input type="submit" class="btn" value="Submit"  />
+      <input type="submit" class="btn" value="Submit"  >
     </p>
   </form>
 
