iteration of audio clips working

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
 @import "bourbon";
+@import url(http://fonts.googleapis.com/css?family=The+Girl+Next+Door);
 $content-width:80%;
 
 .myprofile {
@@ -105,6 +106,7 @@ body{
   }
 }
 
+
 //Actual Menu move
 #sidebartoggler {
   display:none;
@@ -150,7 +152,7 @@ html, body {
 }
 
 .view {
-  position:absolute;
+  position:relative;
   width:100%;
 }
 
@@ -212,12 +214,28 @@ html, body {
   src: url(Delicate.ttf);
 }
 
-h1 {
+@font-face {
+  font-family: 'Whatever';
+  src: url(whatever.ttf);
+}
+
+h1.splash {
   font-family:'Delicate';
-  font-size:200px;
   color:white;
   text-align:center;
   margin-bottom:10px;
+  top:50vh;
+  padding:5%;
+  font-size:40vh;
+}
+
+.splashlink {
+  color:white;
+  font-family: 'Whatever';
+  font-size: 6vh;
+  padding:5%;
+  width:auto;
+  text-decoration:none;
 }
 
 .record {
@@ -265,9 +283,4 @@ video#bgvid {
   width: auto; height: auto; z-index: -100;
   background: no-repeat;
   background-size: cover;
-}
-
-.splash {
-  top:150px;
-  font-size:40vh;
 }
