--- a/app/assets/views/splash.html
+++ b/app/assets/views/splash.html
@@ -1,4 +1,5 @@
-<h1 class='splash'>riff</h1>
+<h1 class="splash">riff</h1>
+<a class="splashlink" href="#/upload">Upload New Riff</a><a class="splashlink" href="#/main">See Your Riffs</a>
 <video autoplay loop id="bgvid">
   <source src="assets/RiffVid.mov" type="video/mp4">
 </video>
