--- a/app/views/remote_content/_remote_sign_in.html.haml
+++ b/app/views/remote_content/_remote_sign_in.html.haml
@@ -7,9 +7,9 @@
    .modal-header
    = simple_form_for(resource, :as => resource_name, :url => session_path(resource_name), :remote => true, :format => :js, :html => {:class => "form-signin"}) do |f|
     .modal-body
-     = text_field_tag 'user[email]', nil, :size=> 37.5, :placeholder => 'Email'
+     = text_field_tag 'user[email]', nil, :size=> 30, :placeholder => 'Email'
      %br
-     = password_field_tag 'user[password]', nil, :size=> 37.5, :placeholder => 'Password'
+     = password_field_tag 'user[password]', nil, :size=> 30, :placeholder => 'Password'
      %br
      = check_box_tag 'user[remember_me]'
      = label_tag 'user[remember_me]', 'Remember me'
@@ -17,6 +17,6 @@
     .footer
      .form-actions
       %a{ :href => "#", "data-dismiss" => "modal" } Cancel
-      %button Sign in
+      %button.button Sign in
       %br
       = link_to "Forgot your password?", new_password_path(:user)
