--- a/app/views/remote_content/_remote_sign_up.html.haml
+++ b/app/views/remote_content/_remote_sign_up.html.haml
@@ -7,14 +7,14 @@
    .modal-header
    = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :remote => true, :format => :js, :html => {:class => "form-signin"}) do |f|
     .modal-body
-     = f.input :email, :autofocus => true, :label => false, :placeholder => "Email", input_html: {size: 37.5}
-     = f.input :password, :label => false, :placeholder => "Password", input_html: {size: 37.5}
-     = f.input :password_confirmation, :label => false, :placeholder => "Confirm password", input_html: {size: 37.5}
-     = link_to remote_sign_in_path, {rel: 'sign_in_modal', :remote => true} do      
-      %li Already have an acount?
+     = f.input :email, :autofocus => true, :label => false, :placeholder => "Email", input_html: {size: 30}, class: 'input'
+     = f.input :password, :label => false, :placeholder => "Password", input_html: {size: 30}
+     = f.input :password_confirmation, :label => false, :placeholder => "Confirm password", input_html: {size: 30}
+     = link_to remote_sign_in_path, {rel: 'sign_in_modal', :remote => true} do
+      %li Already have an Acount?
      = link_to new_user_password_path do
       Forgot your password?
     .footer
      .form-actions
       %a{ :href => "#", "data-dismiss" => "modal" } Cancel
-      = f.button :submit, "Create account"
+      = f.button :submit, "Create account", class: 'button'
