added if_user_signed_in? differences

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,10 @@
 @import "bourbon";
 $content-width:80%;
 
+.id {
+  color: #F0ECC5;
+  text-align: right;
+}
 .myprofile {
   position: absolute;
   left:0;
