--- a/app/assets/views/main.html
+++ b/app/assets/views/main.html
@@ -1,9 +1,9 @@
 <h2>Riffs Feed</h2>
-<button ng-click="#/all"></button>
+<a href="#/all">click me!</a>
 <ul>
   <li ng-repeat="riff in riffs" >
     <!-- {{riff.url}} -->
-    <h3>{{riff.}}</h3>
+    <h3>{{riff.shoutout}}</h3>
     <audio controls>
       <source ng-src={{riff.url}} type="audio/mp3">
     </audio>
