changed some things

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,8 +21,10 @@ input {
 .container1 {
   position: absolute;
   width: 240px;
-  margin-left: 1%;
-  margin-top: 12.5%;
+  padding-left: 7.5px;
+  padding-right: 7.5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   text-align: center;
   background-color: #8E7E96;
   border-radius: 5%;
