--- a/app/assets/views/main.html
+++ b/app/assets/views/main.html
@@ -1,14 +1,19 @@
-<h2>Riffs Feed</h2>
-<a href="#/all">click me!</a>
-<ul>
-  <li ng-repeat="riff in riffs" >
-    <!-- {{riff.url}} -->
-    <h3>{{riff.shoutout}}</h3>
-    <audio controls>
-      <source ng-src={{riff.url}} type="audio/mp3">
-    </audio>
-  </li>
-</ul>
+<div id="bg2">
+  <img src="assets/riffpic2.jpg" alt="">
+</div>
+  <h2>Riffs Feed</h2>
+  <a href="#/all">click me!</a>
+  <ul>
+    <li class="riff" ng-repeat="riff in riffs" >
+      <!-- {{riff.url}} -->
+      <h3>{{riff.shoutout}}:</h3>
+      <div class="audio">
+        <audio controls>
+          <source ng-src={{riff.url}} type="audio/mp3">
+        </audio>
+      </div>
+    </li>
+  </ul>
 
 
 
