added more styling

--- a/app/assets/views/all.html
+++ b/app/assets/views/all.html
@@ -1,5 +1,7 @@
 <h1>Riffs Feed</h1>
-
+<div id="bg">
+  <img src="assets/riffpic2.jpg" alt="">
+</div>
 <ul>
   <span ng-repeat="blob in blobs" >
     <div ng-if=blob.pointer==null>
