--- a/app/assets/views/main.html
+++ b/app/assets/views/main.html
@@ -1,9 +1,11 @@
 
 <div id="bg2">
-  <img src="assets/riffpic2.jpg" alt="">
+  <img src="assets/musicstand.jpg" alt="">
 </div>
-  <h2>Riffs Feed</h2>
+<div class="mainwrapper">
+  <h2>My Riffs</h2>
   <a href="#/all">click me!</a>
+<div class="sheet">
   <ul>
     <li class="riff" ng-repeat="riff in riffs" >
       <!-- {{riff.url}} -->
@@ -15,6 +17,8 @@
       </div>
     </li>
   </ul>
+</div>
+</div>
 
 
 <!-- <ul>
