--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -194,11 +194,13 @@ html, body {
   min-width: 50%;
   min-height: 50%;
   z-index:-1;
+  -webkit-filter: sepia(1);
+  filter: sepia(1);
 }
 
 #bg2 {
   position: fixed;
-  top: -50%;
+  top: -20%;
   left: -50%;
   width: 200%;
   height: 200%;
@@ -211,12 +213,9 @@ html, body {
   right: 0;
   bottom: 0;
   margin: auto;
-  min-width: 50%;
-  min-height: 50%;
+  min-width: 120vh;
+  min-height: 100vh;
   z-index:-1;
-  -webkit-filter: sepia(1);
-  filter: sepia(1);
-  opacity: 1;
 }
 
 .upload {
@@ -337,9 +336,21 @@ video#bgvid {
   background-size: cover;
 }
 
+.mainwrapper {
+  text-align:center;
+}
+
 h2 {
   font-size:12vh;
   margin:0;
+}
+
+.sheet {
+  background: white;
+  width:80%;
+  height:70vh;
+  margin-left:5%;
+  overflow:scroll;
 }
 
 li.riff {
