tweaked some styles

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -351,17 +351,22 @@ h2 {
   height:70vh;
   margin-left:5%;
   overflow:scroll;
-}
-
-li.riff {
-  list-style-type:none;
-  h3 {
-    width:10vw;
-    font-size:4vh;
-    margin:0;
-    color:black;
+  border: 1px solid darkgray;
+  ul {
+    padding-top:10px;
+    li.riff {
+      list-style-type:none;
+      h3 {
+        width:10vw;
+        font-size:4vh;
+        margin:0;
+        color:black;
+      }
+    }
   }
 }
+
+
 
 div.audio {
   background: url('staffC.png');
