--- a/app/assets/views/all.html
+++ b/app/assets/views/all.html
@@ -7,6 +7,7 @@
     <audio controls>
       <source ng-src={{blob.url}} type="audio/mp3">
     </audio>
+    <a href class="playall">></a>
     <a href ng-click="formToggle = !formToggle"><h3>Upload Your Riff</h3></a>
       <form ng-upload="uploadComplete(content)" action="/riffblobs.json" ng-show="formToggle">
 
