--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+@import url(//fonts.googleapis.com/css?family=Roboto:400,100);
 @import "bourbon";
-@import url(http://fonts.googleapis.com/css?family=The+Girl+Next+Door);
+@import url(//fonts.googleapis.com/css?family=The+Girl+Next+Door);
 $content-width:80%;
 
 .id {
