--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,6 +21,7 @@ input {
 .container1 {
   position: absolute;
   width: 240px;
+  margin-top: 6%;
   padding-left: 7.5px;
   padding-right: 7.5px;
   padding-top: 10px;
@@ -194,14 +195,35 @@ html, body {
   min-width: 50%;
   min-height: 50%;
   z-index:-1;
-  -webkit-filter: sepia(1);
-  filter: sepia(1);
+  -webkit-filter: opacity(.8);
+  filter: opacity(.8);
+}
+
+#bg1 {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  z-index:-1;
+}
+#bg1 img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+  z-index:-1;
 }
 
 #bg2 {
   position: fixed;
   top: -20%;
   left: -50%;
+  bottom:0;
   width: 200%;
   height: 200%;
   z-index:-1;
@@ -215,6 +237,26 @@ html, body {
   margin: auto;
   min-width: 120vh;
   min-height: 100vh;
+  z-index:-1;
+}
+
+#bg3 {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  z-index:-1;
+}
+#bg3 img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
   z-index:-1;
 }
 
@@ -240,6 +282,14 @@ html, body {
   -webkit-animation: slide 1.5s ease;
   display:block;
 
+}
+
+.uploadRiff {
+  display: flex;
+  justify-content: space-between;
+  input {
+    width: 130px;
+  }
 }
 
 @-webkit-keyframes slide {
@@ -340,19 +390,46 @@ video#bgvid {
   text-align:center;
 }
 
+
+ul.allblobs {
+    width:80%;
+  li.blob {
+    list-style-type: none;
+    margin:6%;
+    background: rgba(0,0,0,0.5);
+    width:60vw;
+    div {
+      opacity: 1;
+      .avatar {
+        width:12vw;
+        height:22vh;
+        position:absolute;
+        display:flex;
+        left:0;
+      }
+      h3 {
+        display:inline-block;
+      }
+    }
+  }
+}
+
 h2 {
   font-size:12vh;
   margin:0;
+  display:inline-block;
+  padding:8%;
 }
 
 .sheet {
   background: white;
-  width:80%;
+  width:90%;
   height:70vh;
-  margin-left:5%;
+  margin:auto;
   overflow:scroll;
   border: 1px solid darkgray;
   ul {
+    padding:20px;
     padding-top:15px;
     li.riff {
       list-style-type:none;
@@ -366,8 +443,6 @@ h2 {
   }
 }
 
-
-
 div.audio {
   background: url('staffC.png');
   background-size: 370px;
@@ -378,5 +453,74 @@ div.audio {
 
 audio {
   padding-bottom:20px;
+}
 
+.allaudio {
+  display:inline-block;
+}
+
+h1.all {
+  text-align:center;
+  color:white;
+}
+
+h3.shoutout {
+  color:white;
+  font-size:5vh;
+}
+
+.audiowrap {
+  padding:10px auto;
+  audio {
+    vertical-align:middle;
+  }
+}
+
+.musicstand {
+  margin-top:8vh;
+}
+
+.navbuttons {
+  height:14vh;
+}
+
+.navbutton {
+  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  box-shadow:inset 0px 1px 0px 0px #ffffff;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
+  background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
+  background-color:#f9f9f9;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+  border-radius:6px;
+  border:1px solid #dcdcdc;
+  display:inline;
+  cursor:pointer;
+  color:#666666;
+  font-family:arial;
+  font-size:16px;
+  font-weight:bold;
+  padding:8px 16px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #ffffff;
+}
+.navbutton:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
+  background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
+  background-color:#e9e9e9;
+}
+.navbutton:active {
+  position:relative;
+  top:1px;
 }
