--- a/app/assets/views/main.html
+++ b/app/assets/views/main.html
@@ -1,5 +1,5 @@
 <div id="bg3">
-  <img src="//cdn.home-designing.com/wp-content/uploads/2013/11/28-music-room.jpg" alt="">
+  <img src="https://cdn.home-designing.com/wp-content/uploads/2013/11/28-music-room.jpg" alt="">
 </div>
 
 <div class="mainwrapper">
