--- a/app/assets/views/upload.html
+++ b/app/assets/views/upload.html
@@ -1,5 +1,5 @@
 <div id="bg1">
-  <img src="//www.eskimoinsulation.com/images/sound-rooms.jpg" alt="">
+  <img src="https://www.eskimoinsulation.com/images/sound-rooms.jpg" alt="">
 </div>
 <h1>riff</h1>
 <button class="record" ng-init="show = true" ng-show="show" ng-click="show=!show; myStyle={color:red}"></button>
