--- a/app/assets/views/all.html
+++ b/app/assets/views/all.html
@@ -1,6 +1,6 @@
 <h2>Riffs Feed</h2>
 <div id="bg">
-  <img src="//michaelwroberts.com/wp-content/uploads/2014/02/record-player.jpg" alt="">
+  <img src="https://michaelwroberts.com/wp-content/uploads/2014/02/record-player.jpg" alt="">
 </div>
 <ul class="allblobs">
   <li ng-repeat="blob in blobs" class="blob">
