--- a/app/assets/views/all.html
+++ b/app/assets/views/all.html
@@ -5,7 +5,7 @@
 <ul class="allblobs">
   <li ng-repeat="blob in blobs" class="blob">
     <div ng-if=blob.pointer==null>
-      <img class="avatar" src="http://www.fillmurray.com/g/200/300" alt="">
+      <img class="avatar" src="https://www.fillmurray.com/g/200/300" alt="">
       <h3 class="shoutout">{{blob.shoutout}}</h3>
       <div class="audiowrap">
         <audio class="allaudio" controls>
