--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -503,7 +503,7 @@ h3.shoutout {
   display:inline;
   cursor:pointer;
   color:#666666;
-  font-family:arial;
+  font-family:Sling;
   font-size:16px;
   font-weight:bold;
   padding:8px 16px;
